--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ h6 {
     font-family: 'EB Garamond', serif;
     font-weight: 600;
     font-style: italic;
+    font-size: 0%;
     color: #121518;
 }
 
